# crypto-worldcup-platform

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cryptowcreview.patch  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: app.db
docs/: architecture.md  decisions.md  handoff.md  roadmap.md  taskbook.md  telegram-bot.md  v1-release-note.md  v2-release-note.md  v3-release-note.md  v4-release-note.md  v5-release-note.md  v6-release-note.md  v7-release-note.md  v8-release-note.md  v9-release-note.md
docs/developments/: M0.md  M1.md
src/app/: main.py  main_bot.py
src/app/api/: dependencies.py  main.py
src/app/api/routers/: crypto.py  dashboard.py  football.py
src/app/bot/: __init__.py  formatters.py  handlers.py  inline.py  jobs.py  main.py  search.py
src/app/clients/: base_client.py  bourse_client.py  coingecko_client.py  crypto_client.py  fiat_client.py  football_client.py  protocols.py
src/app/config/: container.py  settings.py
src/app/models/: crypto.py  football.py
src/app/presentation/: menu.py  renderers.py
src/app/services/: cache_policy.py  cache_strategy.py  crypto_service.py  football_service.py
src/app/static/css/: style.css
src/app/static/js/: main.js
src/app/storage/: base_repository.py  json_repository.py  models.py  sqlalchemy_repository.py  sqlite_repository.py
src/app/templates/: base.html  coin_detail.html  dashboard.html
src/app/templates/partials/: crypto_table.html  football_table.html
src/app/utils/: exceptions.py  logger.py  result.py
tests/: test_bot_search.py  test_coingecko_client.py  test_config.py  test_models.py  test_services.py  test_sqlalchemy_repository.py  test_sqlite_repository.py  test_storage.py
tests/api/: test_routes.py
